--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,18 @@ body {
 .feira-container {
     width: 90%;
     height: 90%;
+    display: flex;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
 }
+
+.header {
+    display: flex;
+}
+
+.logo-img img {
+    width: 15%;
+    display: flex;
+    padding: 1rem;
+}
+
 
