--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,13 @@ body {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
 }
 
-.header-container{
-    width: 1729px;
-    height: 150px;
+header {
+    width: 100%;
+    height: 18%;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
     background-color: #f3e69f;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
 }
@@ -202,10 +205,8 @@ body {
 
 .feira-title {
     display: inline-block;
-    padding-top: 52px;
     align-items: center;
     justify-content: center;
-    margin-left: 380px;
 }
 
 .feira-title h1 {
@@ -229,29 +230,76 @@ body {
     text-align: center;
 }
 
-.menu {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .menu ul {
-    margin-top: 52px;
-    margin-left: 100px;
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
-}
-
-.menu ul li {
-    padding: 0.7rem;
-    display: inline-block;
 }
 
 .menu ul li a{
     text-decoration: none;
-    color: #47331B;
+    color: black;
     font-weight: 600;
+    display: block;
+    padding: 8px 16px 8px 16px;
+    border-radius: 10px;
 }
 
 .menu ul li a:hover {
-    color: #9BA141;
+    color: #FFF;
+    background-color: #9BA141;
+}
+
+/* Card sections */
+
+main.cards {
+    display: flex;  
+    padding: 32px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+}
+
+main.cards section.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 1rem 1.5rem;
+    border-radius: 8px;
+    width: 256px;
+    margin-left: 70px; 
+}
+
+main.cards section.card:first-child {
+    margin-left: 0;
+    /*problemas resolvido no first:child pois a margin-left da primeira imagem tende a permanecer errado caso não seja alterado*/
+}
+
+main.cards section.card .icon {
+    width: 300px;
+    height: 300px;
+}
+
+main.cards section.card img {
+    width: 100%;
+}
+
+@media screen and (max-width: 720px) {
+    main.cards {
+        flex-direction: column;
+    }
+
+    main.cards section.card {
+        margin-left: 0;
+        margin-bottom: 32px;
+
+    }
+
+    main.cards section.card:last-child {
+        margin-bottom: 0;
+    }
+    
+    main.cards section.card button {
+        font-size: 70%;
+    }
+
 }
