--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,14 @@ body {
     padding: 0.4rem 1rem;
     border-radius: 5px;
     cursor: pointer;
+    transition: all .2s ease-in-out;
+    position: relative; 
 }
 
 .register-button button:hover {
     background-color: #a3aa45;
+    top: -4px;
+    box-shadow: 0px 4px 3px black;
 }
 
 .register-button button a {
@@ -133,10 +137,14 @@ body {
     padding: 0.62rem;
     border-radius: 5px;
     cursor: pointer;
+    transition: all .2s ease-in-out;
+    position: relative; 
 }
 
 .login-button button:hover {
+    top: -4px;
     background-color: #a3aa45;
+    box-shadow: 0px 4px 3px black;
 }
 
 .login-button button a {
@@ -243,15 +251,38 @@ header {
     display: block;
     padding: 8px 16px 8px 16px;
     border-radius: 10px;
+    transition: all .2s ease-in-out;
+    position: relative;
 }
 
 .menu ul li a:hover {
     color: #FFF;
     background-color: #9BA141;
+    top: -4px;
+    box-shadow: 0px 4px 3px black;
 }
 
 /* Card sections */
 
+.cards-container {
+    max-width: 1400px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cards-container div {
+    flex: 1 1 350px;
+    margin: 10px;
+}
+
+.cards-container img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+
+/* Versão de rian 
 main.cards {
     display: flex;  
     padding: 32px;
@@ -271,7 +302,7 @@ main.cards section.card {
 
 main.cards section.card:first-child {
     margin-left: 0;
-    /*problemas resolvido no first:child pois a margin-left da primeira imagem tende a permanecer errado caso não seja alterado*/
+    problemas resolvido no first:child pois a margin-left da primeira imagem tende a permanecer errado caso não seja alterado
 }
 
 main.cards section.card .icon {
@@ -302,4 +333,4 @@ main.cards section.card img {
         font-size: 70%;
     }
 
-}
+}*/
