--- a/css/map.css
+++ b/css/map.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Lexend+Mega:wght@300;400;500;600&family=Poppins:wght@100&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +9,6 @@
 
 body {
     width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,15 +68,16 @@ header {
 }
 
 .map{
-    display: inline-block;
+    justify-content: center;
+    display: block;
     position: relative;
-    text-align: center;
+    align-items: center;
 }
 
 .map figcaption{
+    justify-content: center;
     position: absolute;
     top: 75px;
-    right: 10%;
     font-size: 30px;
     padding: 8px 16px 8px 16px;
     border-radius: 10px;
@@ -85,6 +87,5 @@ header {
 }
 
 .map img{
-  width: 100%;
-  height: 80vh;
+    
 }
